Actualización a estatus rama MASTER
